--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -397,6 +397,19 @@ average_maxtemp
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
 
+From this two-panel plot showing the average max temperature in January
+and in July, we could conclude that the average max temperature in
+January is much lower than in July, which is very reasonable. First of
+all, let’s see the distribution of average max temperature in January,
+the temperature is smoothly increasing from 1980 to 1991, then decreased
+for 4-5 years, and then increased for next 3-4 years. After 1991, the
+trend of average max temperature starts to fluctuate regularly. There
+are several outliers, which is much lower than other observations.
+
+And then, let’s see the distribution of average max temperature in July.
+The trend is much stable than the trend in January. However, outliers
+also existed, like the very low datapoint in 1987.
+
 3.  Make a two-panel plot showing
 
 <!-- -->
@@ -449,3 +462,12 @@ final_two_panel
     ## Picking joint bandwidth of 3.76
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-18-1.png" width="90%" />
+
+In this two-panel plot, we could see the result of tmax vs tmin for the
+full dataset in the left one and the distribution of snowfall values
+greater than 0 and less than 100 separately by year in the right one.
+From the left one, we could see that there are several outliers, which
+are much higher than our normal data points. From the right one, we
+could see the overall trend of snowfall values are close in each year.
+However, in recent years, the peaks are not obvious and become more
+smooth compared with earlier years.
